# ChangeLog for dev-util/hgview
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jul 2009; Alex Alexander <wired@gentoo.org> -hgview-1.0.0.ebuild:
  moved to tree

  10 Jul 2009; Davide Pesavento <davidepesa@gmail.com> hgview-1.0.0.ebuild:
  Slightly improve readability and efficiency by using bash builtins instead
  of cut.

*hgview-1.0.0 (08 Jul 2009)

  08 Jul 2009; Dror Levin <spatz@psybear.com> +hgview-1.0.0.ebuild,
  +metadata.xml:
  Initial commit, bug 274562. Thanks to Martin Gysel for the ebuild.
