@@ -1,2 +1,3 @@
-MISC ChangeLog 552 RMD160 8411e2f32359576db71d3388806d22f6f46dffb2 SHA1 3cd5788045d4bf59faf3b8bde3c73a045c40d77d SHA256 9703a271b7c5605751fe41744fdcec3a8e28451a55cac9e42a2ee7232e360da0
+EBUILD hgview-9999.ebuild 1057 RMD160 bce46d2a9b5f29dea95857c8547a2e8b4e85c876 SHA1 2dff6b9a638e57379f05f2bb4e242b44c5ea4163 SHA256 ab433622925a1348c6d8df6b2de8f4acbca7800d41edab74752109d3741d4c8d
+MISC ChangeLog 671 RMD160 edd1db97e30261fb09328490bea00c8492413415 SHA1 7c402e46f8b7ce34c09c10b90532c70087215aed SHA256 4bff300471be74ad8c0e963bdb749b6f6e200abcfc4b376cb6ae9b2be67a671d
 MISC metadata.xml 156 RMD160 2c307fe3d7f514f10f158344b51114121632f411 SHA1 1b61305bd125f03b40ed85c17989140608e1efee SHA256 2bc85ad7339ae0191c26e435f2da777058779a7ebf73d14658a6ea7bfcec01b2
