@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*hgview-9999 (23 Jul 2009)
+
+  23 Jul 2009; Alex Alexander <wired@gentoo.org> +hgview-9999.ebuild:
+  added live ebuild
+
   23 Jul 2009; Alex Alexander <wired@gentoo.org> -hgview-1.0.0.ebuild:
   moved to tree
 
